# EasyProtoLib

./: LICENSE  README.md  THIRD-PARTY.json  pyproject.toml
benchmarks/: test_chunk.py  timing.py
src/easyprotolib/: __init__.py  advanced_datatypes.py  basic_datatypes.py  biome.py  block.py  chunk.py  command.py  data_packet.py  err.py  nbt.py
tests/: mc_byte_cases.py  mc_int_cases.py  mc_long_cases.py  mc_short_cases.py  mc_unsignedbyte_cases.py  mc_unsignedshort_cases.py  test_basic_datatypes.py
